reduce max page size
